--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
         </div>
     </section>
 
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>Learning HTML CSS at the beginning</p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+        </div>
+    </section>
+
 
 </body>
 
