--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange">Isbat Oikko</span> World</h1>
@@ -26,7 +26,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -38,6 +38,31 @@
             <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="experience-item">
+                <h2>Full Stack Web developer</h1>
+                    <h3 class="orange-color">2020-present | Pro level er developer</h3>
+                    <p>Stated the journey with jhankar mahbub's course. Stated the journey with jhankar mahbub's course.
+                        Stated
+                        the journey with jhankar mahbub's course. Stated the journey with jhankar mahbub's course</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby Web dev</h1>
+                    <h3 class="orange-color">2022-2024 | Legendary Level</h3>
+                    <p>Baby web devloper. Baby web developer.Baby web devloper. Baby web developer.Baby web devloper.
+                        Baby
+                        web
+                        developer.Baby web devloper. Baby web developer.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>all rights reserved @2021 by Isbat Oikko</p>
+    </footer>
 
 
 </body>
